# lem-in

./: .gitignore  CMakeLists.txt  Makefile  author  map
inc/: free.h  lem_in.h  parse.h  parser.h  path.h  room.h  solve.h  utils.h
invalid_maps/: DOUBLE_END_ROOM  DOUBLE_START_ROOM.map  GREATER_INT_MAX_ANTS.map  INT_MAX_ANTS.map  INVALID_LINK.map  INVALID_NUMBER_ANTS.map  LESS_ZERO_ANTS.map  NOT_VALID_LINK.map  ZERO_ANTS.map  map06
libft/: Makefile
src/: free.c  lem_in.c  parse.c  parse_ants.c  parse_links.c  parse_rooms.c  paths_get.c  paths_print.c  paths_sort.c  solve.c  utils.c
